--- a/.github/workflows/CD_pipeline.yml
+++ b/.github/workflows/CD_pipeline.yml
@@ -24,8 +24,8 @@
      - name: Configure Databricks CLI
        run: |
          databricks configure --token <<EOF
-         $
-         $
+         ${{ secrets.DATABRICKS_HOST}}
+         ${{secrets.DATABRICKS_TOKEN}}
          EOF
      
      - name: Import Notebook to Workspace
