--- a/job-config.json
+++ b/job-config.json
@@ -4,6 +4,6 @@
   "timeout_seconds": 1200,
   "max_retries": 3,
   "notebook_task": {
-    "notebook_path": "/Workspace/Users/your_username/your_notebook"
+    "notebook_path": "/Workspace/Users/25sha1639trainer1@skillmentoringlabs.onmicrosoft.com/sample_sales_notebook.py"
   }
 }
