--- a/.github/workflows/CD_pipelineNew.yml
+++ b/.github/workflows/CD_pipelineNew.yml
@@ -29,7 +29,7 @@
          EOF
      
      - name: Import Notebook to Workspace
-       run: databricks workspace import sample_sales_notebook.py /Workspace/Users/your_username/your_notebook -l python --overwrite
+       run: databricks workspace import sample_sales_notebook.py /Workspace/Users/25sha1639trainer1@skillmentoringlabs.onmicrosoft.com/samples_sales_notebook.py -l python --overwrite
 
        env:
          DATABRICKS_TOKEN: $
